# ChangeLog for dev-java/compaq-jdk
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/compaq-jdk/ChangeLog,v 1.3 2003/02/12 05:51:23 vapier Exp $

*compaq-jdk-1.3.1 (15 Dec 2002)

  15 Dec 2002; Bjoern Brauel <bjb@gentoo.org> compaq-jdk-1.3.1.ebuild :
  depend on openmotif-2.1

  15 Dec 2002; Bjoern Brauel <bjb@gentoo.org>
  Initial Compaq JDK 1.3.1 for Alpha/Linux/GNU
