@@ -8,7 +8,7 @@ DESCRIPTION="Javadoc for Java SDK version 1.3.1"
 HOMEPAGE="http://java.sun.com/j2se/1.3/docs.html"
 LICENSE="sun-j2sl"
 SLOT="1.3"
-KEYWORDS="x86 ppc sparc"
+KEYWORDS="x86 ppc sparc alpha"
 
 DEPEND="app-arch/unzip"
 	
