@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/compaq-jre
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/compaq-jre/ChangeLog,v 1.4 2003/02/12 05:51:29 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/compaq-jre/ChangeLog,v 1.5 2003/05/09 19:54:41 taviso Exp $
+
+  09 May 2003; Tavis Ormandy <taviso@gentoo.org> compaq-jre-1.3.1.ebuild:
+  Fixing dependecy for openmotif.
 
 *compaq-jre-1.3.1 (15 Dec 2002)
 
