@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/java-sdk-docs
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.7 2003/02/12 05:53:01 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.8 2003/05/09 19:54:41 taviso Exp $
+
+  09 May 2003; Tavis Ormandy <taviso@gentoo.org> java-sdk-docs-1.3.1.ebuild:
+  adding alpha keyword.
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
